# complaint-classifier

./: .gitignore  Procfile  app.py  dvc.yaml  get_data.py  metrics.json  model.py  process_data.py  pyproject.toml  readme.md  requirements.txt  train.py
.dvc/: config
.github/workflow/: cml.yaml
.github/workflows/: main.yml
data/: .gitignore  label_processed.csv  raw.csv.dvc
models/: tfidf.pkl  xgb_58.model
src/: .gitignore  model.py  readme.md  test_pytorch.py  train_new.py  train_pytorch.py
