[tool.poetry]
name = "koinworks-classifier"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
sklearn = "^0.0"
tqdm = "^4.48.2"
pymongo = "^3.11.0"
xgboost = "^1.2.0"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
